i fixed a bug i introduced into the splint integration when i moved the shared test sources into a library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -207,8 +207,8 @@ add_library(testramalloc
 	${RAMALLOC_WINDOWS_GETOPT_SOURCES}
 	)
 add_splint(testramalloc 
-	${TEST_SOURCES} 
-	${TEST_HEADERS}
+	${TEST_RAMALLOC_SOURCES} 
+	${TEST_RAMALLOC_HEADERS}
 	${RAMALLOC_WINDOWS_GETOPT_SOURCES}
 	)
 
