CVS support appears broken, so i removed it. i also cleaned up trio.cmake a bit and fixed a bug in the target dependency graph.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -259,6 +259,7 @@ add_library(testramalloc
 	${TEST_RAMALLOC_HEADERS}
 	${RAMALLOC_WINDOWS_GETOPT_SOURCES}
 	)
+add_dependency_on_trio(testramalloc)
 add_splint(testramalloc 
 	${TEST_RAMALLOC_SOURCES} 
 	${TEST_RAMALLOC_HEADERS}
@@ -281,7 +282,7 @@ set(SLOTTEST_SOURCES src/test/slottest.c)
 add_executable(slottest ${SLOTTEST_SOURCES})
 add_splint(slottest ${SLOTTEST_SOURCES})
 target_link_libraries(slottest ${TEST_LIB_DEPENDENCIES})
-target_link_trio(slottest)
+add_dependency_on_trio(slottest)
 add_test(slottest ${EXECUTABLE_OUTPUT_PATH}/slottest
 	--rng-seed=1564740528)
 
@@ -289,7 +290,7 @@ set(PGTEST_SOURCES src/test/pgtest.c)
 add_executable(pgtest ${PGTEST_SOURCES})
 add_splint(pgtest ${PGTEST_SOURCES})
 target_link_libraries(pgtest ${TEST_LIB_DEPENDENCIES})
-target_link_trio(pgtest)
+add_dependency_on_trio(pgtest)
 add_test(pgtest ${EXECUTABLE_OUTPUT_PATH}/pgtest
 	--allocations=10240 --rng-seed=1342375263)
 
@@ -297,7 +298,7 @@ set(ALGNTEST_SOURCES src/test/algntest.c)
 add_executable(algntest ${ALGNTEST_SOURCES})
 add_splint(algntest ${ALGNTEST_SOURCES})
 target_link_libraries(algntest ${TEST_LIB_DEPENDENCIES})
-target_link_trio(algntest)
+add_dependency_on_trio(algntest)
 add_test(algntest-8 ${EXECUTABLE_OUTPUT_PATH}/algntest
 	--smallest=8 --largest=8
 	--rng-seed=2426525316)
@@ -309,7 +310,7 @@ set(MUXTEST_SOURCES src/test/muxtest.c)
 add_executable(muxtest ${MUXTEST_SOURCES})
 add_splint(muxtest ${MUXTEST_SOURCES})
 target_link_libraries(muxtest ${TEST_LIB_DEPENDENCIES})
-target_link_trio(muxtest)
+add_dependency_on_trio(muxtest)
 add_test(muxtest ${EXECUTABLE_OUTPUT_PATH}/muxtest
 	--rng-seed=2596644741)
 
@@ -317,7 +318,7 @@ set(LAZYTEST_SOURCES src/test/lazytest.c)
 add_executable(lazytest ${LAZYTEST_SOURCES})
 add_splint(lazytest ${LAZYTEST_SOURCES})
 target_link_libraries(lazytest ${TEST_LIB_DEPENDENCIES})
-target_link_trio(lazytest)
+add_dependency_on_trio(lazytest)
 add_test(lazytest-serial ${EXECUTABLE_OUTPUT_PATH}/lazytest --parallelize=1 
 	--rng-seed=342795249)
 add_test(lazytest-parallel ${EXECUTABLE_OUTPUT_PATH}/lazytest)
@@ -326,7 +327,7 @@ set(PARATEST_SOURCES src/test/paratest.c)
 add_executable(paratest ${PARATEST_SOURCES})
 add_splint(paratest ${PARATEST_SOURCES})
 target_link_libraries(paratest ${TEST_LIB_DEPENDENCIES})
-target_link_trio(paratest)
+add_dependency_on_trio(paratest)
 add_test(paratest-serial ${EXECUTABLE_OUTPUT_PATH}/paratest --parallelize=1 
 	--rng-seed=2374434648)
 add_test(paratest-parallel ${EXECUTABLE_OUTPUT_PATH}/paratest)
@@ -335,7 +336,7 @@ set(DEFAULTTEST_SOURCES src/test/defaulttest.c)
 add_executable(defaulttest ${DEFAULTTEST_SOURCES})
 add_splint(defaulttest ${DEFAULTTEST_SOURCES})
 target_link_libraries(defaulttest ${TEST_LIB_DEPENDENCIES})
-target_link_trio(defaulttest)
+add_dependency_on_trio(defaulttest)
 add_test(defaulttest-serial ${EXECUTABLE_OUTPUT_PATH}/defaulttest 
 	--parallelize=1	--rng-seed=2828559559)
 add_test(defaulttest-parallel ${EXECUTABLE_OUTPUT_PATH}/defaulttest)
