improvements to trio build.
specifically, multi-configuration support hadn't been implemented correctly. i've improved the situation somewhat but i'm not certain it's fully resolved. for example, *release* should build the *release* version of trio but *relwithdebinfo* is what "optimized" builds link against. the fact that it currently works is coincidental.

these changes need to be regression tested on linux.

--- a/cmake/trio/CMakeLists.txt
+++ b/cmake/trio/CMakeLists.txt
@@ -64,7 +64,7 @@ install(
 # batch build.
 # TODO: i'd like to cannonize this code.
 if(WIN32)
-	if("${CMAKE_CONFIGURATION_TYPES}")
+	if(DEFINED CMAKE_CONFIGURATION_TYPES)
 		foreach(i ${CMAKE_CONFIGURATION_TYPES})
 			install(TARGETS trio DESTINATION lib/${i} CONFIGURATIONS ${i})
 		endforeach()
