codified detection of multi-configuration builds.
i refactored the cut-and-paste tests for multi-configuration builds into a single macro.

also, the changes i made in commit 538c3c892677390535545deffca78802ac5ba47e don't appear to adversely affect the linux build.

this commit has not been regression tested on windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,33 @@
 # This file is part of the *ramalloc* project at <http://fmrl.org>.
 # Copyright (c) 2011, Michael Lowell Roberts.
-# All rights reserved. 
+# All rights reserved.
 #
-# Redistribution and use in source and binary forms, with or without 
-# modification, are permitted provided that the following conditions are 
-# met: 
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions are
+# met:
 #
-#  * Redistributions of source code must retain the above copyright 
-#  notice, this list of conditions and the following disclaimer. 
+#  * Redistributions of source code must retain the above copyright
+#  notice, this list of conditions and the following disclaimer.
 #
-#  * Redistributions in binary form must reproduce the above copyright 
-#  notice, this list of conditions and the following disclaimer in the 
+#  * Redistributions in binary form must reproduce the above copyright
+#  notice, this list of conditions and the following disclaimer in the
 #  documentation and/or other materials provided with the distribution.
-# 
-#  * Neither the name of the copyright holder nor the names of 
-#  contributors may be used to endorse or promote products derived 
-#  from this software without specific prior written permission. 
 #
-# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS 
-# IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED 
-# TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A 
-# PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER 
+#  * Neither the name of the copyright holder nor the names of
+#  contributors may be used to endorse or promote products derived
+#  from this software without specific prior written permission.
+#
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
+# IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
+# TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
+# PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER
 # OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED 
-# TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR 
-# PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF 
-# LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING 
-# NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS 
-# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
+# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
+# TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+# PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+# LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+# NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 # i use CMake 2.8, so that's what i know works. it might work
 # with earlier versions, however (especially 2.6).
@@ -39,6 +39,7 @@ include(CTest)
 
 include(cmake/splint.cmake)
 include(cmake/cache.cmake)
+include(cmake/detect.cmake)
 
 # CPack integration
 # -----------------
@@ -48,7 +49,7 @@ include(cmake/cache.cmake)
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "a parallelized, amortized-constant time allocator for objects smaller than a hardware page.")
 set(CPACK_PACKAGE_DESCRIPTION "ramalloc is a parallelized, amortized-constant time allocator for objects smaller than a hardware page. it exhibits deterministic performance characteristics, which is necessary for soft real-time applications. it also reduces memory fragmentation, which is important for long-running processes. ramalloc is designed for game and interpreter development but should be useful for other applications as well. ramalloc is also parallelized; there is no global resource that requires serialized access.")
 set(CPACK_PACKAGE_VENDOR "fmrl")
-set(CPACK_PACKAGE_DESCRIPTION_FILE 
+set(CPACK_PACKAGE_DESCRIPTION_FILE
 	"${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 set(CPACK_RESOURCE_FILE_LICENSE
 	"${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
@@ -88,7 +89,7 @@ set_default_cflags(${DEFAULT_CFLAGS} ${DEFAULT_CFLAGS})
 # TODO: if threads aren't available, it's still possible to produce
 # a library but the following changes need to be made:
 #
-#	* the default module should use a mux pool, instead of a 
+#	* the default module should use a mux pool, instead of a
 #	parallelized pool.
 #	* the modules that depend on threads should not be excluded
 #	from the build.
@@ -97,7 +98,7 @@ find_package(Threads REQUIRED)
 # pstdint
 # -------
 # i use pstdint to emulate <stdint.h> when necessary (splint and Windows).
-# the latest version can be fetched from 
+# the latest version can be fetched from
 # <http://www.azillionmonkeys.com/qed/pstdint.h>.
 # TODO: this may not be necessary for VS2010 and later.
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/dep/pstdint)
@@ -108,7 +109,7 @@ install(FILES dep/pstdint/pstdint.h DESTINATION include)
 if(WIN32)
 	include_directories(${CMAKE_CURRENT_SOURCE_DIR}/dep/freebsd/include)
 	install(FILES dep/freebsd/include/getopt.h DESTINATION include)
-	set(RAMALLOC_WINDOWS_GETOPT_SOURCES 
+	set(RAMALLOC_WINDOWS_GETOPT_SOURCES
 		dep/freebsd/include/getopt.h
 		dep/freebsd/src/getopt.c
 		dep/freebsd/src/getopt_long.c
@@ -122,9 +123,9 @@ include_directories(
 	${CMAKE_CURRENT_SOURCE_DIR}/include
 	${CMAKE_CURRENT_BINARY_DIR}/include
 	)
-install(DIRECTORY 
+install(DIRECTORY
 		${CMAKE_CURRENT_SOURCE_DIR}/include/ramalloc
-		${CMAKE_CURRENT_BINARY_DIR}/include/ramalloc 
+		${CMAKE_CURRENT_BINARY_DIR}/include/ramalloc
 	DESTINATION include)
 
 # set up cache variable defaults for ramalloc compile-time options.
@@ -132,39 +133,39 @@ option(WANT_FEEDBACK
 	"enabled (or disables) compile-time option feedback."
 	NO)
 mark_as_advanced(WANT_FEEDBACK)
-optional_cache_string(WANT_DEBUG 
+optional_cache_string(WANT_DEBUG
 	"enables (or disables) debugging features (YES, NO, or DEFAULT).")
-optional_cache_string(WANT_MARK_FREED 
+optional_cache_string(WANT_MARK_FREED
 	"specifies a byte to mark unused memory with (a hexidecimal number or DEFAULT).")
 mark_as_advanced(WANT_MARK_FREED)
-optional_cache_string(WANT_ZEROED_MEMORY 
+optional_cache_string(WANT_ZEROED_MEMORY
 	"enables (or disables) the zeroing of newly allocated memory (YES, NO, or DEFAULT).")
-optional_cache_string(WANT_COMPACT 
+optional_cache_string(WANT_COMPACT
 	"enables (or disables) compact mode, which is not yet tested (YES, NO, or DEFAULT).")
 mark_as_advanced(WANT_COMPACT)
-optional_cache_string(WANT_COMPACT 
+optional_cache_string(WANT_COMPACT
 	"enables (or disables) compact mode, which is not yet tested (YES, NO, or DEFAULT).")
-optional_cache_string(WANT_MINIMUM_PAGE_CAPACITY 
+optional_cache_string(WANT_MINIMUM_PAGE_CAPACITY
 	"specifies a minimum page capacity (a number >1 or DEFAULT).")
 mark_as_advanced(WANT_MINIMUM_PAGE_CAPACITY)
-optional_cache_string(WANT_DEFAULT_RECLAIM_GOAL 
+optional_cache_string(WANT_DEFAULT_RECLAIM_GOAL
 	"specifies a default reclaimation goal (a number >=1 or DEFAULT).")
 mark_as_advanced(WANT_DEFAULT_RECLAIM_GOAL)
-optional_cache_string(WANT_DEFAULT_APPETITE 
+optional_cache_string(WANT_DEFAULT_APPETITE
 	"specifies a default appetite (RAMOPT_FRUGAL, RAMOPT_GREEDY, or DEFAULT).")
 mark_as_advanced(WANT_DEFAULT_APPETITE)
-option(WANT_NPTL_DEADLOCK 
+option(WANT_NPTL_DEADLOCK
 	"enables (or disables) the demonstration of a deadlock in NPTL."
 	NO)
-option(WANT_NO_UNUSED_ARGS 
-	"enables (or disables) help finding incorrect unused argument annotations." 
+option(WANT_NO_UNUSED_ARGS
+	"enables (or disables) help finding incorrect unused argument annotations."
 	NO)
 mark_as_advanced(WANT_NO_UNUSED_ARGS)
-option(WANT_OVERCONFIDENT 
-	"enables (or disables) overconfident mode (unsupported)." 
+option(WANT_OVERCONFIDENT
+	"enables (or disables) overconfident mode (unsupported)."
 	NO)
 mark_as_advanced(WANT_OVERCONFIDENT)
-configure_file(src/lib/config.h.in 
+configure_file(src/lib/config.h.in
 	${CMAKE_CURRENT_BINARY_DIR}/include/ramalloc/config.h @ONLY)
 
 # specify source files.
@@ -241,7 +242,8 @@ add_library(ramalloc ${RAMALLOC_SOURCES} ${RAMALLOC_HEADERS})
 add_splint(ramalloc ${RAMALLOC_SOURCES} ${RAMALLOC_HEADERS})
 # TODO: i'd like to cannonize this code.
 if(WIN32)
-	if("${CMAKE_CONFIGURATION_TYPES}")
+	detect_multi_configuration_build(IS_MULTI_CONFIG_BUILD)
+	if(IS_MULTI_CONFIG_BUILD)
 		foreach(i ${CMAKE_CONFIGURATION_TYPES})
 			install(TARGETS ramalloc DESTINATION lib/${i} CONFIGURATIONS ${i})
 		endforeach()
@@ -269,20 +271,20 @@ set(TEST_RAMALLOC_HEADERS
 	src/test/shared/parseargs.h
 	src/test/shared/test.h
 	)
-add_library(testramalloc 
-	${TEST_RAMALLOC_SOURCES} 
+add_library(testramalloc
+	${TEST_RAMALLOC_SOURCES}
 	${TEST_RAMALLOC_HEADERS}
 	${RAMALLOC_WINDOWS_GETOPT_SOURCES}
 	)
 add_dependency_on_trio(testramalloc)
-add_splint(testramalloc 
-	${TEST_RAMALLOC_SOURCES} 
+add_splint(testramalloc
+	${TEST_RAMALLOC_SOURCES}
 	${TEST_RAMALLOC_HEADERS}
 	${RAMALLOC_WINDOWS_GETOPT_SOURCES}
 	)
 
-set(TEST_LIB_DEPENDENCIES 
-	ramalloc 
+set(TEST_LIB_DEPENDENCIES
+	ramalloc
 	${CMAKE_THREAD_LIBS_INIT}
 	testramalloc
 	)
@@ -334,7 +336,7 @@ add_executable(lazytest ${LAZYTEST_SOURCES})
 add_splint(lazytest ${LAZYTEST_SOURCES})
 target_link_libraries(lazytest ${TEST_LIB_DEPENDENCIES})
 add_dependency_on_trio(lazytest)
-add_test(lazytest-serial ${EXECUTABLE_OUTPUT_PATH}/lazytest --parallelize=1 
+add_test(lazytest-serial ${EXECUTABLE_OUTPUT_PATH}/lazytest --parallelize=1
 	--rng-seed=342795249)
 add_test(lazytest-parallel ${EXECUTABLE_OUTPUT_PATH}/lazytest)
 
@@ -343,7 +345,7 @@ add_executable(paratest ${PARATEST_SOURCES})
 add_splint(paratest ${PARATEST_SOURCES})
 target_link_libraries(paratest ${TEST_LIB_DEPENDENCIES})
 add_dependency_on_trio(paratest)
-add_test(paratest-serial ${EXECUTABLE_OUTPUT_PATH}/paratest --parallelize=1 
+add_test(paratest-serial ${EXECUTABLE_OUTPUT_PATH}/paratest --parallelize=1
 	--rng-seed=2374434648)
 add_test(paratest-parallel ${EXECUTABLE_OUTPUT_PATH}/paratest)
 
@@ -352,7 +354,7 @@ add_executable(defaulttest ${DEFAULTTEST_SOURCES})
 add_splint(defaulttest ${DEFAULTTEST_SOURCES})
 target_link_libraries(defaulttest ${TEST_LIB_DEPENDENCIES})
 add_dependency_on_trio(defaulttest)
-add_test(defaulttest-serial ${EXECUTABLE_OUTPUT_PATH}/defaulttest 
+add_test(defaulttest-serial ${EXECUTABLE_OUTPUT_PATH}/defaulttest
 	--parallelize=1	--rng-seed=2828559559)
 add_test(defaulttest-parallel ${EXECUTABLE_OUTPUT_PATH}/defaulttest)
 
@@ -364,7 +366,7 @@ add_test(compattest ${EXECUTABLE_OUTPUT_PATH}/compattest)
 
 # install the README and LICENSE files.
 if(UNIX)
-	install(FILES LICENSE README.md	ROFLME.md 
+	install(FILES LICENSE README.md	ROFLME.md
 		DESTINATION share/ramalloc
 		)
 else(UNIX)
@@ -374,7 +376,7 @@ endif(UNIX)
 # documentation
 # -------------
 include(cmake/doxygen.cmake)
-add_doxygen(ramalloc ramalloc 
+add_doxygen(ramalloc ramalloc
 	src/doc/groups.h ${RAMALLOC_HEADERS} ${RAMALLOC_SOURCES})
 # TODO: i don't yet how to force the generation of documentation
 # if "package" is the target.
